Needs don't work with restrictions

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,8 +86,7 @@ deploy:
   image: alpine:latest
   stage: deploy
   rules: 
-    - needs:
-        - job: publish
+    - if: $CI_COMMIT_BRANCH == "main"
   tags:
     - deployment
   script:
