--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.3.3",
     "bcrypt": "^5.1.1",
     "eslint": "^8.0.0",
+    "joi": "^17.13.0",
     "knex": "^3.1.0",
     "mysql2": "^3.9.2",
     "next": "^14.1.4",
@@ -30,7 +31,8 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.0",
     "server-only": "^0.0.1",
-    "tailwind": "^4.0.0"
+    "tailwind": "^4.0.0",
+    "zod": "^3.23.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
