--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@syncfusion/ej2-react-gantt": "^25.1.35",
     "bcrypt": "^5.1.1",
     "eslint": "^8.0.0",
+    "eslint-plugin-jsdoc": "^48.2.3",
     "knex": "^3.1.0",
     "mysql2": "^3.9.2",
     "next": "^14.1.4",
