--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@
 stages:
   - install
   - build
-  - lint
+  - sonarcloud-check
   - format
   - publish
   - deploy
@@ -35,6 +35,10 @@ default:
       - public/
     policy: pull-push
   image: node:latest
+
+variables:
+  SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+  GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
 
 install:
   stage: install
@@ -50,12 +54,23 @@ build:
   script:
     - npm run build
 
-lint:
-  stage: lint
+sonarcloud-check:
   needs:
     - job: install
+  rules:
+    - if: $CI_PIPELINE_SOURCE = "merge_request_event"
+    - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_COMMIT_BRANCH == "dev"
+    - allow_failure
+  image:
+    name: sonarsource/sonar-scanner-cli:latest
+    entrypoint: [""]
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
   script:
-    - npm run lint
+    - sonar-scanner
 
 format:
   stage: format
@@ -66,6 +81,8 @@ format:
 
 publish:
   image: docker:latest
+  needs:
+    - job: build
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
   tags:
@@ -85,6 +102,8 @@ publish:
 deploy:
   image: alpine:latest
   stage: deploy
+  needs:
+    - job: publish
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
   tags:
