--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=group12_ntnu-group-12
 sonar.organization=group12
+sonar.qualitygate.wait=true
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=NTNU - Group 12
