--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,6 @@ default:
     policy: pull
   image: oven/bun:1
 
-
 variables:
   SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar" # Defines the location of the analysis task cache
   GIT_DEPTH: "0" # Tells git to fetch all the branches of the project, required by the analysis task
@@ -68,6 +67,7 @@ sonarcloud-check:
 
 format:
   stage: checks
+  allow_failure: true
   script:
     - bun run format
 
