--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@heroicons/react": "^2.1.3",
     "@mui/x-charts": "^7.1.1",
     "@syncfusion/ej2-react-gantt": "^25.1.35",
     "@types/react-router-dom": "^5.3.3",
     "bcrypt": "^5.1.1",
+    "daisyui": "^4.7.3",
     "eslint": "^8.0.0",
     "knex": "^3.1.0",
     "mysql2": "^3.9.2",
@@ -31,8 +33,7 @@
     "react-router-dom": "^6.23.0",
     "server-only": "^0.0.1",
     "tailwind": "^4.0.0",
-    "zod": "^3.23.5",
-    "daisyui": "^4.7.3"
+    "zod": "^3.23.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
@@ -43,8 +44,8 @@
     "autoprefixer": "^10.0.1",
     "bun-types": "^1.0.33",
     "eslint-config-next": "14.1.3",
-    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-jsdoc": "^48.2.3",
+    "eslint-plugin-react": "^7.34.1",
     "globals": "^15.0.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
