--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^4.7.3",
     "knex": "^3.1.0",
     "mysql2": "^3.9.2",
+    "negotiator": "^0.6.3",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "oracledb": "^6.4.0",
