--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -114,5 +114,6 @@ deploy:
     - scp -i $ID_RSA -o StrictHostKeyChecking=no ./Caddyfile.tmp deployer@129.241.153.29:/home/deployer
     - ssh -i $ID_RSA -o StrictHostKeyChecking=no deployer@129.241.153.29 "mv Caddyfile.tmp Caddyfile"
     - ssh -i $ID_RSA -o StrictHostKeyChecking=no deployer@129.241.153.29 "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY"
+    - ssh -i $ID_RSA -o StrictHostKeyChecking=no deployer@129.241.153.29 "docker image pull registry.stud.idi.ntnu.no:5050/bachelorgruppe-12-bidata-2024/praksisplasslista"
     - ssh -i $ID_RSA -o StrictHostKeyChecking=no deployer@129.241.153.29 'docker compose -f docker-compose.prod.yaml --env-file .env up -d'
     - ssh -i $ID_RSA -o StrictHostKeyChecking=no deployer@129.241.153.29 "docker logout"
