--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "server-only": "^0.0.1",
+    "sharp": "^0.33.3",
     "zod": "^3.23.5"
   },
   "devDependencies": {
