--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@tabler/icons-react": "^3.3.0",
     "bcrypt": "^5.1.1",
     "daisyui": "^4.7.3",
     "knex": "^3.1.0",
